<resources>
    <string name="app_name">App_Entrenamiento_Nadador</string>
    <string name="crearEntreno">Crear Entrenamiento</string>
    <string name="verEstadisticas">Ver Estadísticas</string>
    <string name="modificarEntreno">Modificar</string>
    <string name="eliminarEntreno">Eliminar</string>
    <string name="entreno_nuevo">Entrenamiento</string>
    <string name="fechaEntreno">Fecha</string>
    <string name="fechaHint">Fecha</string>
    <string name="tiempoEntreno">Tiempo</string>
    <string name="horasHint">Horas</string>
    <string name="minutosHint">Minutos</string>
    <string name="segundosHint">Segundos</string>
    <string name="distanciaHint">Distancia</string>
    <string name="cancelarEntreno">Cancelar</string>
    <string name="ingresarEntreno">Ingresar</string>
    <string name="distancia_mts">Distancia (mts)</string>
    <string name="distancia_mtsEntreno">Distancia (mts)</string>
    <string name="crear_entrenoContextual">Crear Entrenamiento</string>
    <string name="modificar_Contextual">Modificar</string>
    <string name="eliminar_contextual">Eliminar</string>
    <string name="crear_entreno">Crear Entrenamiento</string>
    <string name="fecha_dialog">Fecha</string>
    <string name="modificar_entreno">Modificar Entrenamiento</string>
    <string name="titulo_estadisticas">Estadísticas</string>
    <string name="segundos_por_km">Segundos por Km</string>
    <string name="velocidad_media">Velocidad Media</string>
    <string name="fecha_hint_modificar">Fecha</string>
    <string name="info_entrenamiento">Info Entrenamiento</string>
    <string name="fecha_titulo_info">Fecha</string>
    <string name="fecha_info_entreno">Fecha</string>
    <string name="tiempo_titulo">Tiempo</string>
    <string name="distancia_titulo_info">Distancia</string>
    <string name="nombreSheredPreferences"><u>Nombre</u></string>
    <string name="tvApellido_SheredPreferences"><u>Primer Apellido</u></string>
    <string name="tvApellido2_SheredPreferences"><u>Segundo Apellido</u></string>
    <string name="tvAltura_SheredPreferences"><u>Altura</u></string>
    <string name="tvEdad_SheredPreferences"><u>Edad</u></string>
    <string name="edEdad_SheredPrefferences">Edad</string>
    <string name="edAlturaHint">Altura</string>
    <string name="edPesoHint"><u>Peso</u></string>
    <string name="tvAnhos_SheredPreferences">Años</string>
    <string name="tvMetros_SheredPreferences">m</string>
    <string name="tvKg_SheredPreferences">Kg</string>
    <string name="tv_tituloSlash">Trainning Swimming</string>
    <string name="tv_tituloSlashRojo">Trainning Swimming</string>
    <string name="tv_tituloSlashNegro">Trainning Swimming</string>
    <string name="tv_km_nadados_en_total">Km Nadados en Total</string>
    <string name="btn_Aceptar">Aceptar</string>
    <string name="tv_media_minutos_por_km">Media minutos por Km</string>
    <string name="tv_minutos_kmTitulo">Minutos /km</string>
    <string name="tv_distancia_total_km">Distancia Total (km)</string>
    <string name="tv_velocidad_media_km_h_titulo">Velocidad Media (km/h)</string>
    <string name="modificar_datos_personales">Datos Personales</string>
    <string name="guardar_datos">Guardar</string>
    <string name="nombreSheredPreferencesActivity">Nombre</string>
    <string name="tvApellido_SheredPreferencesActivity">Primer Apellido</string>
    <string name="tvApellido2_SheredPreferencesActivity">Segundo Apellido</string>
    <string name="tvAltura_SheredPreferencesActivity">Altura</string>
    <string name="tvEdad_SheredPreferencesActivity">Edad</string>
    <string name="edPesoHintActivity">Peso</string>
    <string name="todo_ImageButton">TODO</string>
</resources>