<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/accionCrearEntrenamiento"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/crearEntreno" />


    <item
        android:id="@+id/accionVerEstadisticas"
        android:title="@string/verEstadisticas" />
    <item
        android:id="@+id/accionModificar"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/modificarEntreno" />
    <item
        android:id="@+id/accionEliminar"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/eliminarEntreno" />
    <item
        android:id="@+id/accionDatosPersonales"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/modificar_datos_personales" />
</menu>