<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <TextView
        android:id="@+id/titulo_entreno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:autofillHints=""
        android:background="#020202"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:foregroundTint="#2196F3"
        android:inputType="none"
        android:shadowColor="#FFFFFF"
        android:text="@string/entreno_nuevo"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/tV_FechaTrainning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="3dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/fechaEntreno"
        android:textColor="#020202"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="3dp"
        android:autofillHints=""
        android:hint="@string/fecha_dialog"
        android:inputType="none"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textColor="#2962FF"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tV_TiempoTrainning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="3dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/tiempoEntreno"
        android:textColor="#020202"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edTxtHoras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/horasHint"
            android:inputType="number"
            android:textColor="#2962FF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edTxtMinutos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/minutosHint"
            android:inputType="number"
            android:textColor="#2962FF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edTxtSegundos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/segundosHint"
            android:inputType="number"
            android:textColor="#2962FF"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tV_Distancia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="3dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/distancia_mtsEntreno"
        android:textColor="#020202"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edTxtDistancia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:autofillHints=""
        android:hint="@string/distanciaHint"
        android:inputType="number"
        android:textColor="#2962FF"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>