<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/secondaryColor2"
    android:orientation="vertical"
    android:padding="25dp">

    <TextView
        android:id="@+id/titulo_eliminarMulti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:autofillHints=""
        android:background="#020202"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:foregroundTint="#2196F3"
        android:inputType="none"
        android:shadowColor="#FFFFFF"
        android:text="@string/modificar_entreno"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/tv_KmNadadosTotalTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-black"
        android:paddingTop="8dp"
        android:text="@string/fechaEntreno"
        android:textColor="#020202"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_MinPorKm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:fontFamily="@font/amaranth"
        android:hint="@string/fecha_hint_modificar"
        android:inputType="date"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textColor="#2962FF"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/tv_mediaMinPorKmTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/tiempoEntreno"
        android:textColor="#020202"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/tv_hora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:fontFamily="@font/amaranth"
            android:hint="@string/horasHint"
            android:inputType="number"
            android:textColor="#2962FF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tv_minutos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:fontFamily="@font/amaranth"
            android:hint="@string/minutosHint"
            android:inputType="number"
            android:textColor="#2962FF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tv_mediaMinPorKm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:fontFamily="@font/amaranth"
            android:hint="@string/segundosHint"
            android:inputType="number"
            android:textColor="#2962FF"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/tV_Distancia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="3dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/distancia_mtsEntreno"
        android:textColor="#020202"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/tv_DistanciaTrainning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="30dp"
        android:autofillHints=""
        android:fontFamily="@font/amaranth"
        android:hint="@string/distanciaHint"
        android:inputType="number"
        android:textColor="#2962FF"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_red_light"
            android:fontFamily="sans-serif-black"
            android:onClick="onClickButtonCancelar"
            android:text="@string/cancelarEntreno"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Space
            android:layout_width="30dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btn_Eliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_green_light"
            android:fontFamily="sans-serif-black"
            android:onClick="onClickButtonAceptar"
            android:text="@string/ingresarEntreno"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>